<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">당근마켓</string>

    <string name="nav_title_home">홈</string>
    <string name="nav_title_category">카테고리</string>
    <string name="nav_title_write">글쓰기</string>
    <string name="nav_title_chat">채팅</string>
    <string name="nav_title_my_carrot">나의 당근</string>
    <string name="nav_title_profile">프로필 설정</string>
    <string name="nav_title_setting">설정</string>

    <string name="nav_action_next">다음</string>
    <string name="complete">완료</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>

    <!-- activity_region_list.xml -->
    <string name="hint_search_region_list">내 동네 이름으로 검색</string>
    <string name="no_result_region">검색 결과가 없습니다</string>
    <string name="re_search_region">동네 이름 다시 검색하기</string>
    <string name="btn_search_entire_region">전체 동네 목록 조회</string>
    <string name="entire_region">전체 동네</string>
    <string name="filtered_region_by_word">\'s\' 검색결과</string>
    <string name="region_already_enroll">이미 등록된 동네입니다</string>
    <string name="region_current_enroll">현재 등록된 동네입니다</string>

    <!-- activity_sign_up.xml -->
    <string name="hint_write_nickname_label">닉네임</string>
    <string name="hint_write_nickname">닉네임을 입력해주세요</string>
    <string name="sign_up_description">당근마켓은 신뢰를 기반으로 하는 지역 커뮤니티입니다\n프로필 사진과 닉네임을 입력해주세요</string>
    <string name="nickname_min">닉네임은 최소 2자 입니다</string>
    <string name="nickname_max">닉네임은 최대 8자 입니다</string>

    <!-- firebase -->
    <string name="firebase_auth_create_user_error">회원가입에 실패하였습니다 (Auth)</string>
    <string name="firebase_firestore_save_user_error">회원가입에 실패하였습니다 (Firestore)</string>
    <string name="firebase_create_account_ok">회원가입 성공</string>
    <string name="firebase_sign_in_success">로그인 성공</string>
    <string name="firebase_sign_in_failed">로그인 실패</string>
    <string name="firebase_wrong_password">비밀번호가 틀렸습니다</string>
    <string name="dialog_firebase_not_exist_account">등록되지 않은 회원 정보입니다\n입력하신 정보로 회원 가입을 하시겠습니까?</string>
    <string name="firebase_get_user_failed">회원정보를 불러오는데 실패하였습니다</string>

    <string name="fail_update_region">동네 변경에 실패하였습니다</string>
    <string name="fail_add_region">동네 추가에 실패하였습니다</string>
    <string name="fail_delete_region">동네 삭제에 실패하였습니다</string>

    <string name="success_enroll_item">상품이 등록되었습니다</string>
    <string name="fail_enroll_item">상품 등록에 실패하였습니다</string>


    <!-- 입력정보 -->
    <string name="input_id_blank">아이디를 입력해주세요</string>
    <string name="input_id_too_long">아이디가 너무 깁니다</string>
    <string name="input_id_too_short">아이디가 너무 짧습니다</string>
    <string name="input_password_blank">비밀번호를 입력해주세요</string>
    <string name="input_password_too_short">비밀번호가 너무 짧습니다</string>
    <string name="input_nickname_too_long">닉네임이 너무 깁니다</string>
    <string name="input_nickname_too_short">닉네임이 너무 짧습니다</string>

    <string name="input_title_blank">제목을 입력해주세요</string>
    <string name="input_category_blank">카테고리를 선택해주세요</string>
    <string name="input_content_blank">내용을 입력해주세요</string>

    <!-- fragment_my_carrot.xml -->
    <string name="go_detail_profile">프로필 보기</string>
    <string name="sell_list">판매내역</string>
    <string name="buy_list">구매내역</string>
    <string name="want_list">관심목록</string>
    <string name="set_my_region">내 동네 설정</string>
    <string name="certificate_region">동네 인증하기</string>
    <string name="notify_keyword">키워드 알림</string>
    <string name="see_collection">모아보기</string>
    <string name="region_life_post">동네생활 글</string>
    <string name="region_life_comment">동네생활 댓글</string>
    <string name="invite_friend">친구초대</string>
    <string name="share_carrot">당근마켓 공유</string>
    <string name="notice">공지사항</string>
    <string name="customer_center">고객센터</string>
    <string name="setting">앱 설정</string>

    <!-- bottomsheet_sell_used_item -->
    <string name="sell_used_item">중고거래</string>
    <string name="sell_used_item_description">중고 물건을 판매할 수 있어요</string>
    <string name="region_life">동네생활</string>
    <string name="region_life_description">우리 동네에 관련된 질문이나 이야기를 할 수 있어요</string>

    <!-- activity_write_used_item.xml -->
    <string name="title_write_used_item">중고거래 글쓰기</string>
    <string name="total_count_image">/10</string>
    <string name="item_title">제목</string>
    <string name="item_category">카테고리</string>
    <string name="item_won">₩</string>
    <string name="item_price">가격 (선택사항)</string>
    <string name="item_suggest_price">가격제안 받기</string>
    <string name="item_content">xx동에 올릴 게시글 내용을 작성해주세요. 가품 및 판매금지품목은 게시가 제한될 수 있어요.</string>
    <string name="item_current_region">현재 선택된 동네 : </string>

    <string name="msg_save_post_temp">게시글이 임시저장 되었습니다</string>

    <string-array name="categories">
        <item>"디지털/가전"</item>
        <item>"가구/인테리어"</item>
        <item>"유아동/유아도서"</item>
        <item>"생활/가공식품"</item>
        <item>"스포츠/레저"</item>
        <item>"여성잡화"</item>
        <item>"여성의류"</item>
        <item>"남성패션/잡화"</item>
        <item>"게임/취미"</item>
        <item>"뷰티/미용"</item>
        <item>"반려동물용품"</item>
        <item>"도서/티켓/음반"</item>
        <item>"기타 중고물품"</item>
    </string-array>

    <!-- activity_app_setting.xml -->
    <string name="sign_out">로그아웃</string>
    <string name="remove_account">탈퇴하기</string>

    <!-- dialog -->
    <string name="negative_cancel">취소</string>
    <string name="positive_ok">확인</string>
    <string name="positive_change">네, 변경할게요</string>

    <string name="dialog_delete_region">선택한 지역을 삭제하시겠습니까?</string>
    <string name="dialog_update_region">동네는 최소 1개이상 선택되어있어야 합니다.\n현재 설정된 동네를 변경하시겠어요?</string>

    <string name="dialog_have_saved">임시 저장된 게시글이 있습니다.\n이어서 게시글을 작성하시겠어요?</string>
    <string name="negative_have_saved">아니요, 새로 작성할래요</string>
    <string name="positive_have_saved">네, 이어서 작성할래요</string>

    <!-- etc -->
    <string name="exceptional_error">알 수 없는 오류가 발생했습니다\n동일 현상이 계속 나타날 시, 고객센터에 문의해주세요</string>
    <string name="dot">·</string>


</resources>