<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.RegionListActivity"
        android:background="@color/colorSurface">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar_region_list"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintTop_toTopOf="parent"
            app:contentInsetStart="0dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/action_back"
                    android:layout_width="@dimen/toolbar_image_item"
                    android:layout_height="@dimen/toolbar_image_item"
                    android:src="@drawable/ic_outline_arrow_back_24"
                    android:padding="@dimen/padding_half"
                    android:layout_marginHorizontal="@dimen/margin_half"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

                <ImageView
                    android:id="@+id/image1"
                    android:layout_width="@dimen/toolbar_image_item"
                    android:layout_height="@dimen/toolbar_image_item"
                    android:padding="10dp"
                    app:layout_constraintStart_toEndOf="@id/action_back"
                    app:layout_constraintTop_toTopOf="@id/action_back"
                    app:layout_constraintBottom_toBottomOf="@id/action_back"
                    android:src="@drawable/ic_outline_search_24"/>

                <EditText
                    android:id="@+id/input_toolbar_search_region_list"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:layout_marginEnd="@dimen/margin_normal"
                    android:hint="@string/hint_search_region_list"
                    android:singleLine="true"
                    app:layout_constraintTop_toTopOf="@id/image1"
                    app:layout_constraintBottom_toBottomOf="@id/image1"
                    app:layout_constraintStart_toEndOf="@id/image1"
                    app:layout_constraintEnd_toEndOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="@dimen/separator_height"
                    app:layout_constraintStart_toStartOf="@id/image1"
                    app:layout_constraintEnd_toEndOf="@id/input_toolbar_search_region_list"
                    app:layout_constraintTop_toBottomOf="@id/image1"
                    android:background="@color/colorSeparator"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
            android:id="@+id/no_result_layout_region_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/toolbar_region_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/ic_launcher" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_result_region"
                android:layout_margin="@dimen/margin_half"
                android:textSize="@dimen/text_normal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/re_search_region"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:textSize="@dimen/text_normal"/>

        </LinearLayout>

        <Button
            android:id="@+id/btn_search_entire_region_list"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height_small"
            app:layout_constraintTop_toBottomOf="@id/toolbar_region_list"
            android:layout_margin="@dimen/margin_normal"
            android:text="@string/btn_search_entire_region"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_small"
            android:textStyle="bold"
            android:background="@drawable/decorate_border_no_solid_colorprimary_round"/>

        <TextView
            android:id="@+id/text_search_filter_region_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/btn_search_entire_region_list"
            android:layout_marginTop="@dimen/margin_double"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:text="@string/entire_region"
            android:textSize="@dimen/text_small"
            android:textColor="@color/colorDescription"/>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_region_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:overScrollMode="never"
            android:scrollbars="vertical"
            android:background="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_search_filter_region_list"
            app:layout_constraintBottom_toBottomOf="parent"
            android:paddingTop="@dimen/padding_normal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
