<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.WriteUsedItemActivity"
    android:background="@color/colorSurface">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStart="0dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/action_back"
                android:layout_width="@dimen/toolbar_image_item"
                android:layout_height="@dimen/toolbar_image_item"
                android:layout_marginHorizontal="@dimen/margin_half"
                android:padding="@dimen/padding_half"
                android:src="@drawable/ic_outline_arrow_back_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                style="@style/toolbarTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                app:layout_constraintStart_toEndOf="@id/action_back"
                android:text="@string/title_write_used_item" />

            <TextView
                android:id="@+id/action_next"
                style="@style/toolbarTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:paddingHorizontal="@dimen/padding_normal"
                android:textSize="@dimen/text_big"
                android:textColor="@color/colorTextAccent"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/complete" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.MaterialToolbar>

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_height"
        android:background="@color/colorSeparator"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingHorizontal="@dimen/padding_normal"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/separator2"
        app:layout_constraintTop_toBottomOf="@id/separator1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/action_add_image"
                android:layout_width="@dimen/image_biggest"
                android:layout_height="@dimen/image_biggest"
                android:layout_marginVertical="@dimen/margin_normal"
                android:background="@drawable/decorate_border_colorseparatorlight_solid_colorsurface_round"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/image_add_image"
                    android:layout_width="@dimen/image_normal"
                    android:layout_height="@dimen/image_normal"
                    android:src="@drawable/ic_outline_photo_camera_24"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/current_count_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    />

                <TextView
                    android:id="@+id/current_count_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/image_add_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/total_count_image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    tools:text="1"
                    android:textColor="@color/colorPrimary"/>

                <TextView
                    android:id="@+id/total_count_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_count_image"
                    app:layout_constraintStart_toEndOf="@id/current_count_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image_add_image"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toEndOf="@id/action_add_image"
                app:layout_constraintTop_toTopOf="@id/action_add_image"
                app:layout_constraintBottom_toBottomOf="@id/action_add_image"
                android:orientation="horizontal"
                android:overScrollMode="never"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_marginStart="@dimen/margin_normal"
                tools:listitem="@layout/item_image_selected"/>

            <View
                android:id="@+id/separator3"
                android:layout_width="match_parent"
                android:layout_height="@dimen/separator_height"
                android:background="@color/colorSeparatorLight"
                app:layout_constraintTop_toBottomOf="@id/action_add_image"
                android:layout_marginTop="@dimen/margin_normal"/>

            <EditText
                android:id="@+id/input_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/padding_1.5_times"
                android:hint="@string/item_title"
                android:textColorHint="@color/colorHint"
                android:textSize="@dimen/text_big"
                android:background="@android:color/transparent"
                app:layout_constraintTop_toBottomOf="@id/separator3"/>

            <View
                android:id="@+id/separator4"
                android:layout_width="match_parent"
                android:layout_height="@dimen/separator_height"
                android:background="@color/colorSeparatorLight"
                app:layout_constraintTop_toBottomOf="@id/input_title" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/separator4">

                <TextView
                    android:id="@+id/text_category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/padding_1.5_times"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:text="@string/item_category"
                    android:textSize="@dimen/text_big"/>

                <ImageView
                    android:layout_width="@dimen/image_normal"
                    android:layout_height="@dimen/image_normal"
                    android:src="@drawable/ic_outline_arrow_down_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/separator5"
                android:layout_width="match_parent"
                android:layout_height="@dimen/separator_height"
                android:background="@color/colorSeparatorLight"
                app:layout_constraintTop_toBottomOf="@id/layout_category" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/layout_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/separator5">

                <TextView
                    android:id="@+id/text_won"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/padding_1.5_times"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="@color/colorHint"
                    android:text="@string/item_won"
                    android:textSize="@dimen/text_big"/>

                <EditText
                    android:id="@+id/input_price"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/padding_1.5_times"
                    app:layout_constraintStart_toEndOf="@id/text_won"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/layout_suggest_price"
                    android:layout_marginStart="@dimen/margin_half"
                    android:background="@android:color/transparent"
                    android:textColorHint="@color/colorHint"
                    android:maxLength="10"
                    android:inputType="number"
                    android:hint="@string/item_price"
                    android:textSize="@dimen/text_big"/>


                <LinearLayout
                    android:id="@+id/layout_suggest_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingVertical="@dimen/padding_1.5_times"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <ImageView
                        android:id="@+id/image_suggest_price"
                        android:layout_width="@dimen/image_normal"
                        android:layout_height="@dimen/image_normal"
                        android:src="@drawable/ic_outline_check_circle_24"
                        app:tint="@color/colorHint"/>

                    <TextView
                        android:id="@+id/text_suggest_price"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/margin_quarter"
                        android:textSize="@dimen/text_normal"
                        android:textColor="@color/colorHint"
                        android:text="@string/item_suggest_price"/>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:id="@+id/separator6"
                android:layout_width="match_parent"
                android:layout_height="@dimen/separator_height"
                android:background="@color/colorSeparatorLight"
                app:layout_constraintTop_toBottomOf="@id/layout_price" />

            <EditText
                android:id="@+id/input_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/separator6"
                android:hint="@string/item_content"
                android:textColorHint="@color/colorHint"
                android:background="@android:color/transparent"
                android:layout_marginVertical="@dimen/margin_1.5_times"
                android:breakStrategy="simple"
                android:lineSpacingMultiplier="1.5"
                android:gravity="top|start"
                android:textSize="@dimen/text_big" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/separator_height"
        android:background="@color/colorSeparator"
        app:layout_constraintBottom_toTopOf="@id/layout_bottom" />

    <LinearLayout
        android:id="@+id/layout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingStart="@dimen/padding_normal"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_normal"
            android:textSize="@dimen/text_small"
            android:text="@string/item_current_region" />

        <TextView
            android:id="@+id/text_current_region"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin_normal"
            android:layout_weight="1"
            tools:text="화서동" />

        <ImageView
            android:layout_width="@dimen/image_button_with_padding"
            android:layout_height="@dimen/image_button_with_padding"
            android:layout_gravity="center"
            android:padding="@dimen/padding_image"
            android:src="@drawable/ic_outline_saved_sentence_24" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>